--- a/backend/src/AppBundle/Resources/config/serializer/Pagination.SlidingPagination.yml
+++ b/backend/src/AppBundle/Resources/config/serializer/Pagination.SlidingPagination.yml
@@ -2,4 +2,5 @@ Knp\Bundle\PaginatorBundle\Pagination\SlidingPagination:
     exclusion_policy: ALL
     virtual_properties:
         getPaginationData:
+            groups: [album_page]
             serialized_name: data
